--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -5,20 +5,34 @@
 @import"toolbar";
 @import"formula";
 @import"table";
+@import"dashboard";
 
 *{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+ }
+ 
+ body {
+	 font-family: "Roboto", sans-sarif;
+	 font-size: 12px;
+ }
+ 
+ .material-symbols-outlined {
+	 font-variation-settings:
+	 'FILL' 0,
+	 'wght' 700,
+	 'GRAD' 0,
+	 'opsz' 24
+  }
+ 
+ .excel{
+	 position: relative;
+	 color: #888;
+	 height: 100%;
+	 max-width: 100%;
+ }
 
-body {
-	font-family: "Roboto", sans-sarif;
-	font-size: 12px;
-}
 
-.excel{
-	position: relative;
-}
 
 
